--- a/SM64BS/SM64BS.csproj
+++ b/SM64BS/SM64BS.csproj
@@ -12,6 +12,9 @@
   </PropertyGroup>
   
   <ItemGroup>
+    <Reference Include="BSML">
+      <HintPath>D:\Steam\steamapps\common\Beat Saber\Plugins\BSML.dll</HintPath>
+    </Reference>
     <Reference Include="Oculus.VR">
       <HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\Oculus.VR.dll</HintPath>
     </Reference>
@@ -57,6 +60,9 @@
     <Reference Include="UnityEngine.AssetBundleModule">
       <HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\UnityEngine.AssetBundleModule.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.AudioModule">
+      <HintPath>D:\Steam\steamapps\common\Beat Saber\Beat Saber_Data\Managed\UnityEngine.AudioModule.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine.CoreModule">
       <HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
       <Private>False</Private>
@@ -101,7 +107,12 @@
   
   <ItemGroup>
     <EmbeddedResource Include="manifest.json" />
+    <EmbeddedResource Include="UI\Views\settingsView.bsml" />
 	<EmbeddedResource Include="Resources\*" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <None Remove="UI\Views\settingsView.bsml" />
   </ItemGroup>
   
   <ItemGroup>
