Lots of bundle/event stuff

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 *.user
 *.userosscache
 *.sln.docstates
+*.z64
+*.n64
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
@@ -396,3 +398,9 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+SM64BS-Template/Library
+SM64BS-Template/Logs
+SM64BS-Template/obj
+SM64BS-Template/Temp
+SM64BS-Template/baserom.us.z64
