--- a/SM64BS/manifest.json
+++ b/SM64BS/manifest.json
@@ -4,10 +4,15 @@
   "name": "SM64BS",
   "author": "ckosmic",
   "version": "0.0.1",
-  "description": "",
-  "gameVersion": "1.18.3",
+  "description": "libsm64 dumb mod",
+  "gameVersion": "1.20.0",
   "dependsOn": {
-    "BSIPA": "^4.2.0"
+    "BSIPA": "^4.2.1",
+    "SiraUtil": "^3.0.0",
+    "BeatSaberMarkupLanguage": "^1.6.0"
+  },
+  "links": {
+    "project-source": "https://github.com/ckosmic/SM64BS"
   },
   "features": {
     "IPA.DefineFeature": {
